k8s/bige-demo-website/deploy-bige.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qwen14b-deployment
  labels:
    app: vllm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vllm
  template:
    metadata:
      labels:
        app: vllm
    spec:
      containers:
        - image: vllm/vllm-openai:latest
          name: gpu-container
          resources:
            limits:
              cpu: 10
              memory: 40G
              nvidia.com/gpu: "1"
            requests:
              cpu: 8
              memory: 30G
              nvidia.com/gpu: "1"
          command:
            - /bin/bash
            - -c
            - >-
              python3 -m vllm.entrypoints.openai.api_server --model openai-community/gpt2 --dtype auto ---trust-remote-code --served-model-name qwen14b
