k8s/bige-demo-website/ingress-loadbalancer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
    haproxy.org/ssl-redirect: "true"
    haproxy.org/backend-proto: "h1"
    haproxy.org/websocket-support: "true"
  name: bige25f-ingress
spec:
  rules:
  - host: bige25f-chat.nrp-nautilus.io
    http:
      paths:
      - backend:
          service:
            name: bige25f-service
            port:
              number: 8000
        path: /
        pathType: ImplementationSpecific
      - backend:
          service:
            name: bige25f-service
            port:
              number: 8070
        path: /ws
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - bige25f-chat.nrp-nautilus.io
---
apiVersion: v1
kind: Service
metadata:
  name: bige25f-service 
  labels:
    app: bige
spec:
  selector:
    app: bige
  ports:
  - name: http
    protocol: TCP
    port: 8000
    targetPort: 8000
  - name: websocket
    protocol: TCP
    port: 8070
    targetPort: 8070
